k8s-yaml/commercecore/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: commercecore-ingress
  namespace: commercecore
spec:
  ingressClassName: nginx
  rules:
  - host: commercecore.simplify-erp.de
    http:
      paths:
      - backend:
          service:
            name: commercecore-odoo-svc
            port:
              number: 8069
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - commercecore.simplify-erp.de
    secretName: commercecore-tls
status:
  loadBalancer:
    ingress:
    - ip: 88.99.145.186
